--- a/test.html
+++ b/test.html
@@ -1,8 +1,8 @@
 <html>
     <ul>
-        <li>Appels</li>
+        <li>Banana</li>
         <li>Oranges</li>
-        <li>Milk</li>
+        <li>Soya Milk</li>
         <li>Snacks</li>
         <li>Water</li>
     </ul>
