--- a/test.html
+++ b/test.html
@@ -4,6 +4,6 @@
         <li>Oranges</li>
         <li>Soya Milk</li>
         <li>Snacks</li>
-        <li>Water</li>
+        <li>Pepsi</li>
     </ul>
 </html>
